Added auto hide windows feature
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@87540 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -53,7 +53,8 @@
     <Compile Include="Controls\AnchorablePaneDropTarget.cs" />
     <Compile Include="Controls\AnchorablePaneTabPanel.cs" />
     <Compile Include="Controls\AnchorablePaneTitle.cs" />
-    <Compile Include="Controls\AnchorSide.cs" />
+    <Compile Include="Controls\ILogicalChildrenContainer.cs" />
+    <Compile Include="Layout\AnchorSide.cs" />
     <Compile Include="Controls\DockingManagerDropTarget.cs" />
     <Compile Include="Controls\DockingManagerOverlayArea.cs" />
     <Compile Include="Controls\DocumentPaneControlOverlayArea.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Controls\DropTargetType.cs" />
     <Compile Include="Controls\Extentions.cs" />
     <Compile Include="Controls\IDropTarget.cs" />
+    <Compile Include="Controls\LayoutAnchorableControl.cs" />
     <Compile Include="Controls\LayoutAnchorableFloatingWindowControl.cs" />
     <Compile Include="Controls\LayoutAnchorablePaneControl.cs" />
     <Compile Include="Controls\LayoutAnchorablePaneGroupControl.cs" />
