--- a/AvalonDock/AvalonDock.TestApp/AvalonDock.TestApp.csproj
+++ b/AvalonDock/AvalonDock.TestApp/AvalonDock.TestApp.csproj
@@ -98,6 +98,7 @@
     <EmbeddedResource Include="UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
