Build 2.0.0122 - Completing layout serialization
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@88135 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -131,6 +131,9 @@
     <Compile Include="Layout\LayoutPanel.cs" />
     <Compile Include="Layout\LayoutPositionableGroup.cs" />
     <Compile Include="Layout\LayoutRoot.cs" />
+    <Compile Include="Layout\Serialization\LayoutSerializationCallbackEventArgs.cs" />
+    <Compile Include="Layout\Serialization\LayoutSerializer.cs" />
+    <Compile Include="Layout\Serialization\XmlLayoutSerializer.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
