Build 2.0.0238 - Added context menu for anchorables, fixed may issues, many graphics adjustments
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@88748 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controls\AnchorablePaneTabPanel.cs" />
     <Compile Include="Controls\AnchorablePaneTitle.cs" />
     <Compile Include="Controls\DocumentPaneGroupDropTarget.cs" />
+    <Compile Include="Controls\DropDownButton.cs" />
     <Compile Include="Controls\FocusHookHandler.cs" />
     <Compile Include="Controls\FocusElementManager.cs" />
     <Compile Include="Controls\ILogicalChildrenContainer.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Controls\Shell\SystemParameters2.cs" />
     <Compile Include="Controls\Shell\WindowChrome.cs" />
     <Compile Include="Controls\Shell\WindowChromeWorker.cs" />
+    <Compile Include="Converters\InverseBoolToVisibilityConverter.cs" />
     <Compile Include="DocumentCloseEventArgs.cs" />
     <Compile Include="DocumentClosingEventArgs.cs" />
     <Compile Include="Extentions.cs" />
