--- a/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
+++ b/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FileViewModel.cs" />
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="ViewModelBase.cs" />
+    <Compile Include="Workspace.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
