Build 2.0.0278 - Fixed dragging issues, added MVVM support to anchorables
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@89093 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -141,7 +141,7 @@
     <Compile Include="Layout\LayoutAnchorablePaneGroup.cs" />
     <Compile Include="Layout\LayoutAnchorGroup.cs" />
     <Compile Include="Layout\LayoutAnchorSide.cs" />
-    <Compile Include="Controls\LayoutAutoHideWindow.cs" />
+    <Compile Include="Controls\LayoutAutoHideWindowControl.cs" />
     <Compile Include="Layout\LayoutContent.cs" />
     <Compile Include="Layout\LayoutDocument.cs" />
     <Compile Include="Layout\LayoutDocumentFloatingWindow.cs" />
