Build 2.0.0397 - Issues #14847,#14849,#14815. Started theming support.
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@89595 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
+++ b/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ActiveDocumentConverter.cs" />
     <Compile Include="DocumentTemplateSelector.cs" />
     <Compile Include="FileStatsViewModel.cs" />
     <Compile Include="FileViewModel.cs" />
