Build 2.0.0485 - Fixed issue reported in #14824, additional VS2010 theme work, support for icons in tab items
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90212 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Controls\Shell\WindowChrome.cs" />
     <Compile Include="Controls\Shell\WindowChromeWorker.cs" />
     <Compile Include="Converters\InverseBoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\NullToDoNothingConverter.cs" />
     <Compile Include="DocumentCloseEventArgs.cs" />
     <Compile Include="DocumentClosingEventArgs.cs" />
     <Compile Include="Extentions.cs" />
