--- a/AvalonDock/AvalonDock.TestApp/AvalonDock.TestApp.csproj
+++ b/AvalonDock/AvalonDock.TestApp/AvalonDock.TestApp.csproj
@@ -115,6 +115,11 @@
       <Name>AvalonDock</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\address-book--pencil.png" />
+    <Resource Include="Images\address-book-open.png" />
+    <Resource Include="Images\alarm-clock-blue.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
