--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controls\AnchorablePaneTabPanel.cs" />
     <Compile Include="Controls\AnchorablePaneTitle.cs" />
     <Compile Include="Controls\BindingHelper.cs" />
+    <Compile Include="Controls\ContextMenuEx.cs" />
     <Compile Include="Controls\DocumentPaneDropAsAnchorableTarget.cs" />
     <Compile Include="Controls\DocumentPaneGroupDropTarget.cs" />
     <Compile Include="Controls\DropDownButton.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Controls\FocusHookHandler.cs" />
     <Compile Include="Controls\FocusElementManager.cs" />
     <Compile Include="Controls\ILogicalChildrenContainer.cs" />
+    <Compile Include="Controls\MenuItemEx.cs" />
     <Compile Include="Controls\Shell\Standard\ComGuids.cs" />
     <Compile Include="Controls\Shell\Standard\Debug.cs" />
     <Compile Include="Controls\Shell\Standard\DoubleUtil.cs" />
@@ -79,6 +81,7 @@
     <Compile Include="Controls\Shell\WindowChromeWorker.cs" />
     <Compile Include="Converters\InverseBoolToVisibilityConverter.cs" />
     <Compile Include="Converters\NullToDoNothingConverter.cs" />
+    <Compile Include="Converters\UriSourceToBitmapImageConverter.cs" />
     <Compile Include="DocumentCloseEventArgs.cs" />
     <Compile Include="DocumentClosingEventArgs.cs" />
     <Compile Include="Extentions.cs" />
