--- a/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
+++ b/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
@@ -101,6 +101,10 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonDock.Theme.VS2010\AvalonDock.Themes.VS2010.csproj">
+      <Project>{B3FC3E21-5F2D-4581-AEA2-59F671CFFC21}</Project>
+      <Name>AvalonDock.Themes.VS2010</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonDock\AvalonDock.csproj">
       <Project>{DB81988F-E0F2-45A0-A1FD-8C37F3D35244}</Project>
       <Name>AvalonDock</Name>
