Build 2.0.0566 - Fixes 14838,15095, still working on cx menus, some addition to VS2010 theme
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90769 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.Theme.VS2010/AvalonDock.Themes.VS2010.csproj
+++ b/AvalonDock/AvalonDock.Theme.VS2010/AvalonDock.Themes.VS2010.csproj
@@ -117,6 +117,23 @@
     <Resource Include="Images\PinMenu.png" />
     <Resource Include="Images\VTabGroup.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PinAutoHide_Dark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PinClose_Dark.png" />
+    <Resource Include="Images\PinMenu_Dark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PinMaximize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PinRestore.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PinMaximize_Dark.png" />
+    <Resource Include="Images\PinRestore_Dark.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
