Build 2.0.0746 - Fixed layout serialization issues, add support for MVVM serialization using ContentId
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@91213 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Controls\LayoutDocumentItem.cs" />
     <Compile Include="Controls\LayoutItem.cs" />
     <Compile Include="Controls\MenuItemEx.cs" />
+    <Compile Include="Controls\ReentrantFlag.cs" />
     <Compile Include="Controls\Shell\Standard\ComGuids.cs" />
     <Compile Include="Controls\Shell\Standard\Debug.cs" />
     <Compile Include="Controls\Shell\Standard\DoubleUtil.cs" />
