Build 2.0.0794 - Fixed #15173, #15172, ready for the beta
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@91495 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Controls\DocumentPaneGroupDropTarget.cs" />
     <Compile Include="Controls\DropDownButton.cs" />
     <Compile Include="Controls\DropDownControlArea.cs" />
-    <Compile Include="Controls\FocusHookHandler.cs" />
+    <Compile Include="Controls\WindowHookHandler.cs" />
     <Compile Include="Controls\FocusElementManager.cs" />
     <Compile Include="Controls\ILogicalChildrenContainer.cs" />
     <Compile Include="Controls\LayoutAnchorableItem.cs" />
