Build 2.0.0804 - Fixed #15182, Added ILayoutUpdateStrategy sample usage code, Added DropTargetBase.IsDraggingOver
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@91549 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -32,7 +32,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\AvalonDock.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -61,6 +62,7 @@
     <Compile Include="Controls\DocumentPaneGroupDropTarget.cs" />
     <Compile Include="Controls\DropDownButton.cs" />
     <Compile Include="Controls\DropDownControlArea.cs" />
+    <Compile Include="Controls\DropTargetBase.cs" />
     <Compile Include="Controls\WindowHookHandler.cs" />
     <Compile Include="Controls\FocusElementManager.cs" />
     <Compile Include="Controls\ILogicalChildrenContainer.cs" />
