--- a/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
+++ b/AvalonDock/AvalonDock.MVVMTestApp/AvalonDock.MVVMTestApp.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ActiveDocumentConverter.cs" />
+    <Compile Include="LayoutInitializer.cs" />
     <Compile Include="PanesStyleSelector.cs" />
     <Compile Include="PanesTemplateSelector.cs" />
     <Compile Include="FileStatsViewModel.cs" />
