Build 2.0.1432 - Introducing French and Spanish lang support, fixed AdornerDecorator in floating window issue
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@95632 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -215,6 +215,8 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.it.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.fr.resx" />
+    <EmbeddedResource Include="Properties\Resources.es.resx" />
     <None Include="AvalonDock.snk" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
