--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Controls\AnchorablePaneTitle.cs" />
     <Compile Include="Controls\BindingHelper.cs" />
     <Compile Include="Controls\ContextMenuEx.cs" />
+    <Compile Include="Controls\FullWeakDictionary.cs" />
     <Compile Include="Controls\DocumentPaneDropAsAnchorableTarget.cs" />
     <Compile Include="Controls\DocumentPaneGroupDropTarget.cs" />
     <Compile Include="Controls\DropDownButton.cs" />
