--- a/AvalonDock/AvalonDock/AvalonDock.csproj
+++ b/AvalonDock/AvalonDock/AvalonDock.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Controls\AnchorablePaneDropTarget.cs" />
     <Compile Include="Controls\AnchorablePaneTabPanel.cs" />
     <Compile Include="Controls\AnchorablePaneTitle.cs" />
+    <Compile Include="Controls\AutoHideWindowManager.cs" />
     <Compile Include="Controls\BindingHelper.cs" />
     <Compile Include="Controls\ContextMenuEx.cs" />
     <Compile Include="Controls\FullWeakDictionary.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Controls\DropDownControlArea.cs" />
     <Compile Include="Controls\DropTargetBase.cs" />
     <Compile Include="Controls\WeakDictionary.cs" />
+    <Compile Include="Controls\WindowActivateEventArgs.cs" />
     <Compile Include="Controls\WindowHookHandler.cs" />
     <Compile Include="Controls\FocusElementManager.cs" />
     <Compile Include="Controls\ILogicalChildrenContainer.cs" />
@@ -243,6 +245,7 @@
     </Compile>
     <Compile Include="Themes\Theme.cs" />
     <Compile Include="Win32Helper.cs" />
+    <Compile Include="WindowHelper.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
