Build 2.0.1683 - Introducing Expression Dark theme, Patched Issue #15736
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@96782 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.Themes.Aero/AvalonDock.Themes.Aero.csproj
+++ b/AvalonDock/AvalonDock.Themes.Aero/AvalonDock.Themes.Aero.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{BA72CCE0-A9FB-4995-B496-7FEC5C87B85B}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvalonDock.Themes.Aero</RootNamespace>
+    <RootNamespace>AvalonDock.Themes</RootNamespace>
     <AssemblyName>AvalonDock.Themes.Aero</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
