Build 2.0.1691 - Fixed #15745, Added ExpressionLight theme, Support for Hungarian language
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@97076 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.Themes.Expression/AvalonDock.Themes.Expression.csproj
+++ b/AvalonDock/AvalonDock.Themes.Expression/AvalonDock.Themes.Expression.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Controls\UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ExpressionLightTheme.cs" />
     <Compile Include="ExpressionDarkTheme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +62,14 @@
     <Page Include="Controls\UserControl1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LightTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="LightBrushes.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="DarkBrushes.xaml">
       <Generator>MSBuild:Compile</Generator>
